# spkr

./: .gitignore  PROGRESS.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  Overlay.svelte  Settings.svelte  app.css  svelte.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json  settings.json
src-tauri/src/: audio.rs  hotkeys.rs  injector.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs  transcription.rs
